Added base files and images to portfolio.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
             </nav>
             <div class="content">
-                <div id="myInfo"> <!-- Intro content -->
+                <div id="myInfo"> <!-- Intro para content -->
                     I'm <a href="#" data-content="#about" class="myInfo">Ameya Athalye</a>.<br />
                     I live, and <a href="#" data-content="#play" class="myInfo">study</a> in <span class="headerInfo">San Francisco</span>.<br />
                     I <a href="#" data-content="#work" class="myInfo">work</a> in <span class="">East Bay</span>.
