Adding JS files and resume page.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     </head>
     <body class="landing">
         <div class="bodyContainer">
-            <nav class="navbar">
-                <div id="header-img"><a href="#"><img src="./images/aa-logo275X110.png" height="80"/></a></div>
-                <div id="headerInfo">
-                    <ul class="nav-links">
+            <nav class="aa-navbar">
+                <div id="aa-headerImg" class="aa-headerImg"><a href="index.html"><img src="./images/aa-logo275X110.png" height="80"/></a></div>
+                <div id="aa-headerInfo" class="aa-headerInfo">
+                    <ul class="aa-navLinks">
                       <li><a href="index.html">Home</a></li>
+                      <li><a href="work.html">Work</a></li>
                       <li><a href="resume.html">Resume</a></li>
                       <li><a href="playground.html">Playground</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
