--- a/resume.html
+++ b/resume.html
@@ -12,86 +12,104 @@
     </head>
     <body class="landing">
         <div class="bodyContainer">
-            <nav class="navbar">
-                <div id="header-img"><a href="#"><img src="./images/aa-logo275X110.png" height="80"/></a></div>
-                <div id="headerInfo">
-                    <ul class="nav-links">
+            <nav class="aa-navbar">
+                <div id="aa-headerImg" class="aa-headerImg"><a href="index.html"><img src="./images/aa-logo275X110.png" height="80"/></a></div>
+                <div id="aa-headerInfo" class="aa-headerInfo">
+                    <ul class="aa-navLinks">
                       <li><a href="index.html">Home</a></li>
+                      <li><a href="work.html">Work</a></li>
                       <li><a href="resume.html">Resume</a></li>
                       <li><a href="playground.html">Playground</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
-            <div id="work" class="resumecopy">
-                <h1>Welcome to my resume page.</h1>
-                <p>Please click on the arrow next to the text to expand the section.</p>
-                <div class="work-title">
-                    <a>CooperVision </a><img class="arrow-img rotate-initial" src='images/Arrow-forward-icon.jpg' width="20" height="20">
-                </div>
-                <div class="work-copy">
-                    <div class="work-copy-text">
-                        <p>Working closely in a global environment to build and maintain CooperVision websites for Americas, EMEA, AsiaPac and Africa and Central Eurasia regions.</p>
-                        <p>Building webpages, working modules and themes in Drupal.</p>
-                        <p>Projects:</p>
-                        <ul>
-                            <li>Websites rollouts and maintainance</li>
-                                <ul>
-                                    <li>Actively participated in design and development phases</li>
-                                    <li>Populated consumer and practitioner websites for 39 countries in their respective languages. This also involved multilingual countries like Canada, Belgium, Middle East and North Africa, and RTL sites such as Israel</li>
-                                    <li>Performed detailed testing on the sites across all major browsers and mobiles and solved around 20% of bugs and tested the rest</li>
-                                    <li>Wrote custom modules in Drupal 7 as per the country/region requirements</li>
-                                    <li>Over 90% of the sites were delivered to the regions on time for their internal content review</li>
-                                    <li>Created table less layouts from PSD files, word documents and/or other files for various campaigns adhering to best practice coding standards</li>
-                                </ul>
-                            <li>Designing mobile email templates</li>
-                                <ul>
-                                    <li>Desinged and built responsive mobile templates from scratch for a patient communication software called Websystems3 (owned by CooperVision)</li>
-                                    <li>Performed rigourous testing on all major email clients such as Gmail, Outlook, Yahoomail, and Apple mail</li>
-                                </ul>
-                            <li>Creating How to guides for marketing users and training on Drupal7 CMS</li>
-                                <ul>
-                                    <li>Created and actively maintaining How to guides, Image sizes informations for internal marketing users on CooperVision sites</li>
-                                    <li>Conduct training sessions for internal users across the globe on Drupal7 content management system and how to use it to make changes on CooperVision websites</li>
-                                </ul>
-                            <li>Infographic testing</li>
-                                <ul>
-                                    <li>Adding infographics that CooperVision has developed with agencies into Drupal7 websites</li>
-                                    <li>Detailed testing to make sure they work flawless across all browsers and mobile devices</li>
-                                </ul>
-                        </ul>
+            <div class="content">
+                <div class="contactContainer"> <!-- selling points -->
+                    <div id="leftBar" class="leftBar">
+                        <div id="lIntro" class="lIntro">
+                            <h2>Summary</h2>
+                            <p>Front end developer with 6 years of collective experience with HTML, CSS, JavaScript, Drupal and Git</p> 
+                        </div>
+                        <div id="lContact" class="lContact">
+                            <h2>Contact</h2>
+                            <p><strong>Email: </strong><a href="mailto:ameyaa.athalye@gmail.com">ameyaa.athalye@gmail.com</a></p>
+                            <hr>
+                            <p><strong>Proficient in: </strong>HTML, CSS, JavaScript, Git</p>
+                            <p><strong>Good at: </strong>HTML5, React, Drupal, Sketch, Photoshop</p>
+                            <hr>
+                            <p><strong>Education: </strong></p>
+                            <ul>
+                                <li>Masters in Computer Science at San Francisco State University (July 2011)</li>
+                                <li>Bachelors in Computer Engineering at Mumbai University (May 2007)</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="work-copy-image"><img id="arrow" src='images/cv.png' width="200"></div>
-                </div>
-                <hr>
-                <div class="work-title"><a>Temple Baptist Church <img class="arrow-img rotate-initial" src='images/Arrow-forward-icon.jpg' width="20" height="20"></a></div>
-                <div class="work-copy">
-                    <div class="work-copy-text">
-                        <p>Volunteer work for a church website</p>
-                        <ul>
-                            <li>Built a new website for the church and added their content and weekly sermon files</li>
-                            <li>Hosted the website with their preferred hosting service and maintained the website by adding sermon audios, event information, pictures, mission trips information and testimonies</li>
-                            <li>This website was used as an interim website until the church finalized their plans of using an agency that specializes in building and hosting websites for churches</li>
-                        </ul>
+                    <div id="rightBar" class="rightBar">
+                        <div id="rExperience" class="rExperience">
+                            <h2>Experience</h2>
+                            <h3>Front End Developer at CooperVision Inc. (PHP, HTML, CSS, JavaScript, Drupal) [2012-Present]</h3>
+                            <p>Responsibilities:</p>
+                            <ul>
+                                <li>Developing and maintaining responsive CooperVision websites globally in Drupal 7. We have launched 39 sites as of July 2018.</li>
+                                <li>Creating Drupal 7 modules, editing themes and content population for the websites</li>
+                                <li>Modifying the code and developing in PHP, Developing JavaScript effects using JQuery</li>
+                                <li>Creating How to guides for internal CooperVision users and training the team on how to use Drupal</li>
+                                <li>Extensive testing of websites and Infographics across all major browsers and mobiles</li>
+                                <li>Creating table-less layouts from PSD files, word documents and/or other files for various campaigns adhering to best practice coding standards</li>
+                            </ul>
+                            <p>Highlights:</p>
+                            <ul>
+                                <li>Acting as a main point of contact for the dev agency to maintain the website bug cycles and practitioner locators on the CooperVision websites</li>
+                                <li>Managing global social media accounts in absence of a digital social media manager for over 10 months and data migration from Oracle to Salesforce Social Studio. Created new topic profiles and generating monthly reports to track progress in Social Studio</li>
+                            </ul>
+                            <p>Notable projects:</p>
+                            <ul>
+                                <li>Consumer and practitioner website population (each website populated in under a week with over 150 pages and different languages) with detailed testing on desktop and mobile.</li>
+                                <li>Built responsive email templates for automated patient communication system - WebSystem3</li>
+                                <li>Created custom modules for CV websites. Some examples include - track consumers visiting the ‘.com’ site from outside of the USA and direct them to their respective country site, EU cookie compliance module, custom widgets for WYSIWYG and search filters within admin content</li>
+                                <li>Currently working on a project to evaluate and modify CooperVision’s keyword and SEO strategy</li>
+                            </ul>
+                            <hr>
+                            <h3>Intern Web Developer at Zen Den Web Design (HTML, CSS, JavaScript, WordPress) [2011-2012]</h3>
+                            <ul>
+                                <li>Assisted an agile team of experienced web designers to provide the essential services to launch and maintain a powerful online presence</li>
+                                <li>Developed new microsites for Putnam's extended warranty purchase process for old cars using PHP</li>
+                                <li>Built forms, features on 3 website projects and worked on shopping cart applications in WordPress</li>
+                            </ul>
+                            <hr>
+                            <h3>Web Developer at Temple Baptist Church (volunteer) (PHP, HTML, CSS, JavaScript) [2011-2012]</h3>
+                            <ul>
+                                <li>Built a new website and added their existing content and weekly sermon files</li>
+                                <li>Hosted the website with their preferred hosting service and maintained the website by adding sermon audios, event information, pictures, mission trips information and testimonies</li>
+                            </ul>
+                        </div>
+                        <div id="rProjects" class="rProjects">
+                            <h2>Projects</h2>
+                            <h3>“Stats: Project Participation Meter” (PHP, MySQL, HTML, CSS, Google Charts API)</h3>
+                            <ul>
+                                <li>“Stats” is a web application designed to help managers/professors in monitoring team participation in a project or individual contribution in a team</li>
+                                <li>Designed and developed the front end and helped users to store the data, results into MS Excel sheets</li>
+                                <li>Checked commits, forum posts and mailing lists to discover the participation of each member</li>
+                            </ul>
+                            <hr>
+                            <h3>“DeBugger” – Educational Multiplayer Online Game for Students at SFSU (Python, Java, MySQL, Panda3D as game engine, Blender)</h3>
+                            <ul>
+                                <li>DeBugger allows students to fight the 'computer bugs' by answering Java questions to advance in the game, also customizing avatar, socialize and become a part of a virtual, educational community of other students</li>
+                                <li>Tested server scalability using Amazon EC2 cloud. Testing was conducted with generating maximum of 100 client instances and running them concurrently</li>
+                                <li>Developed a few features of the game along with 3d character modeling</li>
+                            </ul>
+                            <hr>
+                            <h3>“Netflix Prize”- Data mining class (Java)</h3>
+                            <ul>
+                                <li>The project was to substantially improve the accuracy of predictions for a user to like a movie based on his/her movie preferences</li>
+                                <li>Used Naïve Bayes algorithm in order to perform the data mining on the training and test dataset with more than 17,000 records provided by Netflix</li>
+                            </ul>
+                        </div> 
                     </div>
-                    <div class="work-copy-image"><img id="arrow" src='images/tbcsf.png' width="200"></div>
                 </div>
-                <hr>
-                <div class="work-title"><a>ZenDen Web Design <img class="arrow-img rotate-initial" src='images/Arrow-forward-icon.jpg' width="20" height="20"></a></div>
-                <div class="work-copy">
-                    <div class="work-copy-text">
-                        <p>Working with an agile team of experienced San Francisco web designers to provide the essential services to launch and maintain a powerful online presence of custom web design, applications development.</p>
-                        <ul>
-                            <li>Developed new microsites for Putnam's extended warrenty for old cars using PHP</li>
-                            <li>Worked and supported other website projects and shopping cart applications in different Wordpress and Magento</li>
-                        </ul>
-                    </div>
-                    <div class="work-copy-image"><img id="arrow" src='images/zenden.png' width="200"></div>
-                </div>
-                <hr>
             </div>
         </div>
-        <div class="clearfix">&nbsp;</div>
         <footer>
             <div class="social-icons">
                   <div id="social">
