--- a/playground.html
+++ b/playground.html
@@ -6,43 +6,50 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300">
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/playground.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     </head>
     <body class="landing">
         <div class="bodyContainer">
-            <nav class="navbar">
-                <div id="header-img"><a href="#"><img src="./images/aa-logo275X110.png" height="80"/></a></div>
-                <div id="headerInfo">
-                    <ul class="nav-links">
+            <nav class="aa-navbar">
+                <div id="aa-headerImg" class="aa-headerImg"><a href="index.html"><img src="./images/aa-logo275X110.png" height="80"/></a></div>
+                <div id="aa-headerInfo" class="aa-headerInfo">
+                    <ul class="aa-navLinks">
                       <li><a href="index.html">Home</a></li>
-                      <li><a href="#">Resume</a></li>
+                      <li><a href="work.html">Work</a></li>
+                      <li><a href="resume.html">Resume</a></li>
                       <li><a href="playground.html">Playground</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
-            <div> <!-- selling points -->
-                <div class="playground-text">
-                    <p>This page has some of the personal learning projects that I created learning JavaScript, jQuery and CSS.
-                    </p>
-                </div>
+            <div class="playground-text">
+                <p>This page has some of the personal learning projects that I created learning JavaScript, jQuery and CSS.
+                </p>
+            </div>
+            <div class="flexContainer">
                 <div id="main" class="taskListForm formBox formBoxBody">
-                    <h2 class="title">Add Items</h2>
-                    <form class="form-inline mb-3">
-                      <input type="text" class="form-control mr-2">
-                      <input type="submit" class="btn btn-dark" value="Submit">
-                    </form>
-                    <h2 class="title">Items</h2>
-                    <ul id="items" class="list-group">
-                      <li class="list-group-item">Item 1</li>
-                      <li class="list-group-item">Item 2</li>
-                      <li class="list-group-item">Item 3</li>
-                      <li class="list-group-item">Item 4</li>
-                    </ul>
+                <h2 class="title">Playing with the DOM</h2>
+                <p>Add, delete, search items.</p>
+                <div class="">
+                    <input type="text" class="form-control" id="filter" placeholder="Search Items..."><br><br>
                 </div>
-
+                <form id="addForm" class="form-inline mb-3">
+                  <input type="text" id="item" class="form-control mr-2">
+                  <input type="submit" class="btn btn-dark" value="Submit">
+                </form>
+                <h2 class="title">Items</h2>
+                <ul id="items" class="list-group">
+                  <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+                  <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+                  <li class="list-group-item">Item 3 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+                  <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
+                </ul>
+            </div>
+            <div>Panel 2</div>
+            <div>Panel 3</div>
             </div>
         </div>
         <footer>
